--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -774,6 +774,7 @@ I'm putting this first so it disables flymake for the following
 langauges.
 #+begin_src emacs-lisp
 (use-package flycheck
+:disabled t
   :ensure t
   :init
   (global-flycheck-mode t))
@@ -932,7 +933,8 @@ because that will override the mode.
 ** python
 #+begin_src emacs-lisp
 (use-package python-black
-  :ensure t
+ :disabled t
+ :ensure t
   :demand t
   :after python
   :hook (python-mode . python-black-on-save-mode))
